--- a/public_site/styles.css
+++ b/public_site/styles.css
@@ -1,38 +1,99 @@
-html, body {
-	margin: 0;
-	height: 100%;
-	padding: 0;
-}
+/* * * * Layout * * * */
 
-#intro {
-	display: inline-block;
-	background: red;
-	width: 100%;
-	height: 100%;
-}
+@media (min-aspect-ratio: 1/1), (min-width: 800px) {
 
-#intro-desc {
-	background: blue;
-	height: 100%;
-	width: 50%;
-	float: left;
-}
-
-#intro-pic {
-	background: green;
-	height: 100%;
-	width: 50%;
-	float: right;
-}
-
-@media only screen and (max-width: 600px) {
-	span {
-		min-width: 100%;
-		height: 50%;
-		display: table-row;
+	html, body {
+		margin: 0;
+		height: 100%;
+		padding: 0;
 	}
 
-	#intro {
-		  display: table;
+	@media (min-height: 450px) {
+		.container {
+			background: blue;
+			height: 100%;
+		}
+	}
+
+	@media (max-height: 450px) {
+		.container {
+			background: yellow;
+			min-height: 100%;
+		}
+	}
+	
+	.container {
+		width: 100%;
+		display: flex;
+	}
+
+	.left, .right {
+		height: 100%;
+		width: 50%;
+	}
+
+	.centered {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		width: 100%;
+	}
+
+	.content {
+		padding: 50px;
 	}
 }
+
+@media (max-aspect-ratio: 1/1) and (max-width: 800px) {
+	.container {
+		padding: 0 10%;
+	}
+}
+
+/* * * * Font * * * */
+html {
+  font-size: 16px;
+}
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  html {
+    font-size: 22px;
+  }
+}
+
+body {
+	font-family: 'Lato', sans-serif;
+}
+
+h1 {
+	font-weight: 700;
+}
+
+p {
+	font-weight: 300;
+}
+
+/* * * * Colors * * * */
+/** 
+h1 {
+	background: black;
+	color: white;
+}
+
+@media (prefers-color-scheme: dark) {
+	html {
+		background: black;
+		color: white;
+	}
+
+	h1 {
+		background: white;
+		color: black;
+	}
+}
+**/
