--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -37,7 +37,7 @@
         android:id="@+id/menu_list_files_file_layout"
         android:icon="@drawable/ic_baseline_blur_linear_24"
         android:orderInCategory="2"
-        android:title="@string/menu_sort"
+        android:title="@string/menu_layout"
         app:showAsAction="always">
         <menu>
             <group
