--- a/clients/android/app/src/main/res/layout/fragment_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_files.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Main.Widget.Actionbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <app.lockbook.ui.BreadCrumbView
@@ -41,7 +43,7 @@
             android:id="@+id/files_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:scrollbars="vertical" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
