--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -39,7 +39,7 @@
         android:orderInCategory="1"
         android:title="@string/menu_list_files_info"
         android:visible="false"
-        app:showAsAction="always" />
+        />
 
     <item
         android:id="@+id/menu_list_files_delete"
@@ -47,7 +47,7 @@
         android:orderInCategory="2"
         android:title="@string/menu_list_files_delete"
         android:visible="false"
-        app:showAsAction="always" />
+        />
 
     <item
         android:id="@+id/menu_list_files_rename"
@@ -55,7 +55,7 @@
         android:orderInCategory="3"
         android:title="@string/menu_list_files_rename"
         android:visible="false"
-        app:showAsAction="always" />
+        />
 
     <item
         android:id="@+id/menu_list_files_move"
@@ -63,7 +63,7 @@
         android:title="@string/menu_list_files_move"
         android:visible="false"
         android:orderInCategory="4"
-        app:showAsAction="always" />
+        />
 
     <item
         android:id="@+id/menu_list_files_share"
@@ -71,20 +71,12 @@
         android:title="@string/menu_list_files_move"
         android:visible="false"
         android:orderInCategory="5"
-        app:showAsAction="always" />
+        />
 
-    <item
-        android:icon="@drawable/ic_baseline_more_vert_24"
-        android:orderInCategory="6"
-        app:showAsAction="always"
-        android:title="@string/overflow">
-        <menu
-            android:id="@+id/menu_list_files_more">
             <item
                 android:id="@+id/menu_list_files_settings"
-                android:title="@string/settings_title" />
-
-        </menu>
-    </item>
+                android:title="@string/settings_title"
+                android:orderInCategory="6"
+                app:showAsAction="never"/>
 
 </menu>
