--- a/clients/android/app/src/main/res/layout/dialog_move_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_move_file.xml
@@ -27,9 +27,11 @@
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/move_operations"/>
 
     <LinearLayout
+        android:id="@+id/move_operations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
