--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_baseline_sort_24"
         android:orderInCategory="2"
         android:title="@string/menu_sort"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <group
                 android:id="@+id/sorting_options"
@@ -39,7 +39,7 @@
         android:orderInCategory="1"
         android:title="@string/menu_list_files_info"
         android:visible="false"
-        />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_list_files_delete"
@@ -47,7 +47,7 @@
         android:orderInCategory="2"
         android:title="@string/menu_list_files_delete"
         android:visible="false"
-        />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_list_files_rename"
@@ -55,28 +55,28 @@
         android:orderInCategory="3"
         android:title="@string/menu_list_files_rename"
         android:visible="false"
-        />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_list_files_move"
         android:icon="@drawable/ic_baseline_content_cut_24"
+        android:orderInCategory="4"
         android:title="@string/menu_list_files_move"
         android:visible="false"
-        android:orderInCategory="4"
-        />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_list_files_share"
         android:icon="@drawable/ic_baseline_share_24"
+        android:orderInCategory="5"
         android:title="@string/menu_list_files_move"
         android:visible="false"
-        android:orderInCategory="5"
-        />
+        app:showAsAction="always" />
 
-            <item
-                android:id="@+id/menu_list_files_settings"
-                android:title="@string/settings_title"
-                android:orderInCategory="6"
-                app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_list_files_settings"
+        android:orderInCategory="6"
+        android:title="@string/settings_title"
+        app:showAsAction="never" />
 
 </menu>
