fixed bugs involving rename and drawingview

--- a/clients/android/app/src/main/res/layout/fragment_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/fragment_text_editor.xml
@@ -37,6 +37,7 @@
             android:hint="@string/text_editor_hint"
             android:importantForAutofill="no"
             android:inputType="textMultiLine|textCapSentences"
+            android:freezesText="true"
             android:textColor="@color/textColor" />
 
     </ScrollView>
