--- a/clients/android/app/src/main/res/layout/activity_main_screen.xml
+++ b/clients/android/app/src/main/res/layout/activity_main_screen.xml
@@ -17,20 +17,35 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/files_fragment"
             android:name="app.lockbook.screen.FilesListFragment"
-            android:layout_width="400dp"
+            android:layout_width="340dp"
             android:layout_height="match_parent"
             android:layout_gravity="start" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/detail_container"
-            android:layout_width="800dp"
+            android:layout_width="700dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
     </androidx.slidingpanelayout.widget.SlidingPaneLayout>
 
-    <include
+    <FrameLayout
         android:id="@+id/progress_overlay"
-        layout="@layout/progress_overlay" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        android:background="@android:color/black"
+        android:clickable="true"
+        android:visibility="gone"
+        tools:ignore="KeyboardInaccessibleWidget,Overdraw">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
