linux billing part 1 and 2 work

--- a/clients/linux/res/app.css
+++ b/clients/linux/res/app.css
@@ -23,4 +23,13 @@
     background-color: @theme_bg_color;
 }
 
+#out_of_space_progressbar_over_95 > trough > progress {
+    background: #EB4237;
+}
+
+#out_of_space_progressbar_over_80 > trough > progress {
+    background: #F9C83F;
+}
+/*#F9C83F*/
+
 
