--- a/clients/android/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="25dp"
     tools:context=".screen.WelcomeActivity">
-
 
     <TextView
         style="@style/Main.Text.Headline"
@@ -22,6 +22,14 @@
         android:layout_height="wrap_content"
         android:paddingBottom="75dp"
         android:text="@string/lockbook_moto" />
+
+    <app.lockbook.ui.TextSwitchView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:tsv_option_one_text="New Account"
+        app:tsv_option_two_text="Import Account"
+        app:tsv_text_size="5"
+        app:tsv_is_option_one_chosen="true" />
 
     <Button
         android:id="@+id/welcome_new_lockbook"
