--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -190,5 +190,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="Main.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 </resources>
