--- a/clients/android/app/src/main/res/drawable/text_switch_bg.xml
+++ b/clients/android/app/src/main/res/drawable/text_switch_bg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:radius="20dp" />
-    <stroke android:width="2dp" android:color="@color/blue" />
-    <solid android:color="#44FFFFFF"/>
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="25dp"/>
+    <stroke android:color="@color/blue" android:width="2dp"/>
+    <solid android:color="@color/transparent"/>
 </shape>
