--- a/clients/android/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -9,36 +9,73 @@
     android:paddingHorizontal="25dp"
     tools:context=".screen.WelcomeActivity">
 
-    <TextView
-        style="@style/Main.Text.Headline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:text="@string/lockbook_title" />
-
-    <TextView
-        style="@style/Main.Text.Body"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="75dp"
-        android:text="@string/lockbook_moto" />
-
-    <app.lockbook.ui.TextSwitchView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        app:tsv_option_one_text="New Account"
-        app:tsv_option_two_text="Import Account"
-        app:tsv_text_size="5"
-        app:tsv_is_option_one_chosen="true" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="20dp" >
 
-    <Button
-        android:id="@+id/welcome_new_lockbook"
-        style="@style/Main.Button.Borderless.Colored"
-        android:layout_marginBottom="15dp"
-        android:text="@string/lockbook_new_account" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/welcome_icon"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_gravity="start"
+            android:src="@drawable/splash_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/welcome_import_lockbook"
-        style="@style/Main.Button.Borderless.Colored"
-        android:text="@string/lockbook_import" />
+        <TextView
+            android:id="@+id/textView"
+            style="@style/Main.Text.Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="15dp"
+            android:text="@string/lockbook_title"
+            app:layout_constraintStart_toEndOf="@+id/welcome_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/welcome_learn_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="4dp"
+            android:paddingTop="20dp"
+            android:text="@string/learn_more"
+            android:textColor="@color/blue"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/welcome_state_switcher"
+        android:layout_width="250dp"
+        android:layout_height="30dp"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_create"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_import"/>
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/welcome_create_import"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
+    <ProgressBar
+        android:id="@+id/welcome_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:minHeight="20dp"
+        android:visibility="gone" />
 </LinearLayout>
