--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -14,6 +14,7 @@
   <color name="light">#E3E5EB</color>
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
+  <color name="lightBlack">#222222</color>
 
   <color name="transparent">#00000000</color>
 
@@ -28,6 +29,8 @@
   <color name="windowBackground">@color/black</color>
   <color name="textColor">@color/light</color>
   <color name="iconColor">@color/light</color>
+  <color name="bottomSheetBackgroundColor">@color/lightBlack</color>
+  <color name="dialogBackgroundColor">@color/black</color>
 
   <bool name="windowLightStatusBar">false</bool>
 </resources>
