got rid of unused resources

--- a/clients/android/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:id="@+id/welcome_learn_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="4dp"
+            android:paddingHorizontal="4dp"
             android:paddingTop="20dp"
             android:text="@string/learn_more"
             android:textColor="@color/blue"
