--- a/clients/android/app/src/main/res/layout/sheet_before_you_start.xml
+++ b/clients/android/app/src/main/res/layout/sheet_before_you_start.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@color/bottomSheetBackgroundColor"
-    >
+    tools:ignore="Overdraw" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/Main.Title"
-        android:text="@string/before_you_start"
-        />
+        android:text="@string/before_you_start" />
 
     <TextView
         android:id="@+id/before_you_start_description"
