fixed text for import button and refactor

--- a/clients/android/app/src/main/res/layout/fragment_on_boarding_import_account.xml
+++ b/clients/android/app/src/main/res/layout/fragment_on_boarding_import_account.xml
@@ -31,6 +31,6 @@
     <Button
         android:id="@+id/on_boarding_import_submit"
         style="@style/Main.Button.Borderless.Colored"
-        android:text="@string/on_boarding_import" />
+        android:text="@string/lockbook_import" />
 
 </LinearLayout>
