--- a/clients/android/app/src/main/res/layout-land/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout-land/toolbar_drawing.xml
@@ -68,7 +68,6 @@
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="25dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        />
+        android:layout_marginBottom="10dp" />
 
 </LinearLayout>
