added intermediate upgrade group and (now unused) endpoint

--- a/clients/android/app/src/main/res/layout/activity_on_boarding.xml
+++ b/clients/android/app/src/main/res/layout/activity_on_boarding.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="25dp"
-    tools:context=".screen.OnBoardingActvity">
+    tools:context=".screen.OnBoardingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
