--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -150,6 +150,11 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="Main.Text.BillingTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
     <style name="Main.Button.Borderless.Colored" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
